css/styles.css
@font-face {
  font-family: 'Pinopolis';
  src: url('fonts/Pinopolis.otf');
}

@keyframes bg {
  from {
    background-position: 0rem 1rem;
  }
  to {
    background-position: 1rem 1rem;
  }
}

:root {
  -webkit-tap-highlight-color: transparent;
  --blk: #001011;
  --grn: #52ffc4;
  --blu: #0075ff;
  --red: #ff2ecc;
  --spd: 250ms;
}

* {
  box-sizing: border-box;
  text-align: center;
}

:root {
  font: 400 21px/1.38 'Pinopolis', monospace;
}

body {
  margin: 0;
  color: var(--blk);
  background: #fcfcfc;
  overflow-x: hidden;
  text-transform: lowercase;
  margin-bottom: 3rem;
}

h1,
h2,
h3,
p,
ul {
  margin: 0 0 1rem;
}

h1,
h2,
h3 {
  font-weight: normal;
  line-height: 1;
}

h1 {
  margin: 3rem 0 3rem;
  line-height: 1;
  font-size: 6rem;
  color: var(--blk);
}

@media screen and (max-width: 56rem) {
  h1 {
    font-size: 4rem;
  }
}
@media screen and (max-width: 36rem) {
  h1 {
    font-size: 2rem;
  }
}

h2 {
  margin: 2rem 0 1rem;
  font-size: 1.5rem;
  display: block;
  line-height: 1;
}

h3 {
  font-size: 1.5rem;
}

ul {
  list-style: none;
  padding: 0;
}

ul.i li {
  list-style: none;
  display: inline-block;
  margin: 0 0.5rem;
  padding: 0;
}

a {
  color: var(--red);
  text-decoration: none;
  position: relative;
}

a:hover:not(.work_item)::before {
  content: '';
  background-image: linear-gradient(90deg, var(--grn) 50%, transparent 50%);
  background-size: 1rem;
  animation: bg 500ms linear infinite;
  width: 100%;
  position: absolute;
  height: 2px;
  bottom: 0px;
  left: 0;
  z-index: -1;
}

img {
  image-rendering: optimizeSpeed;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: pixelated;
  image-rendering: optimize-contrast;
  -ms-interpolation-mode: nearest-neighbor;
}

header,
section {
  margin: auto;
  width: 100%;
  padding: 1rem 2rem;
}

header {
  background: var(--grn);
}

.hdr {
  perspective: 100vw;
  white-space: nowrap;
}

.hdr span {
  display: inline-block;
  transform-style: preserve-3d;
  transform-origin: 50%;
  transition-property: color;
  transition-duration: 1s;
}

.hdr span.spin {
  transition-property: color, transform;
  transform: rotateY(360deg) rotateX(0) rotateZ(360deg);
}

.hdr span.color {
  color: var(--red);
}

.tiltl,
.tiltr {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
}

.tiltl {
  transform: rotate(-15deg);
}

.tiltr {
  transform: rotate(15deg);
}

.work {
  padding: 2rem;
  margin: 0 -2rem;
  display: flex;
  overflow-x: scroll;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
}

.work::-webkit-scrollbar {
  -webkit-appearance: none;
  height: 5px;
  padding: 0 1rem;
  city: 0.5;
  background: #f5f5f5;
}

.work::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background: var(--grn);
  background-position: center;
}

.work_item {
  flex: 1;
  flex-flow: row;
  min-width: 18rem;
  max-width: 18rem;
  padding: 0 1rem;
  overflow: hidden;
  transform: scale(1);
  transition: var(--spd) ease;
  text-decoration: none;
}

@media screen and (max-width: 36rem) {
  .work_item {
    min-width: 90vw;
    max-width: 90vw;
  }
}

.work_item h3 {
  margin: 1rem 0;
  color: var(--blk);
  transition: var(--spd) ease;
}

.work_item p {
  color: var(--blk);
  padding: 0;
  margin: 0;
}

@media screen and (min-width: 36rem) {
  .work_item:hover {
    text-decoration: none;
    /*padding: 0;*/
    transform: scale(1.05);
  }
}

.work_item:hover h3 {
  color: var(--red);
}

.thmb {
  display: block;
  width: 100%;
  height: 15rem;
  object-fit: cover;
}

.bokeh {
  background: rgba(255, 255, 255, 0.75);
  font-family: inherit;
  font-size: 1rem;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.9);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10000;
  -webkit-transform: translateY(100%);
  transform: translateY(100%);
  visibility: hidden;
  backdrop-filter: blur(10px);
}

.bokeh,
.bokeh-blur {
  transition: -webkit-filter var(--spd) ease, visibility 800ms,
    -webkit-transform var(--spd) ease, filter var(--spd) ease, visibility 800ms,
    -webkit-transform var(--spd) ease;
}

.bokeh-blur.has-blur {
  -webkit-filter: blur(10px);
  filter: blur(10px);
}

.bokeh.is-visible {
  visibility: visible;
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

.bokeh > img {
  margin: auto;
  max-height: 80vh;
  max-width: 80vw;
  z-index: 10001;
  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.5);
}

.bokeh > img.is-active {
  display: block;
}

.bokeh__tabs {
  list-style: none;
  margin: 0 auto;
  padding: 0;
  position: absolute;
  bottom: 1rem;
  width: 100%;
  z-index: 10002;
}

.bokeh__tabs > li {
  display: inline-block;
  z-index: 10003;
  border-radius: 50%;
  margin: 0 0.5rem;
  transform: scale(1);
}

.bokeh__tabs > li:hover,
.bokeh__close:hover {
  color: var(--red);
}

.bokeh__tabs > li.is-active {
  background: rgba(0, 0, 0, 0.75);
  transform: scale(1.25);
}

.bokeh__close {
  cursor: pointer;
  top: 0;
  right: 0;
  left: 0;
  z-index: 10003;
  padding: 1em 2em;
  line-height: 0;
}

.bokeh__close,
.bokeh__tabs,
.bokeh__tabs li {
  height: 48px;
  height: 1rem;
  line-height: 48px;
  line-height: 0;
  text-align: center;
  transition: var(--spd) ease;
}

.bokeh__tabs li {
  background: rgba(0, 0, 0, 0.25);
  width: 20px;
  width: 1rem;
  cursor: pointer;
}

.bokeh > img {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: none;
}

.bokeh > img,
.bokeh__close {
  position: absolute;
}

